--- a/myaccount.html
+++ b/myaccount.html
@@ -21,7 +21,7 @@
                 <li><a href="project.html">Services</a></li>
                 <li><a href="actualites.html">Les Infos-Vertes</a></li>
                 <li>
-                    <a href="cart.html"><i class="bx bx-cart"></i></a>
+                    <a href="fakepanier.html"><i class="bx bx-cart"></i></a>
                     <a href="connection.html"><i class="bx bxs-user-circle"></i></a>
                 </li>
             </ul>
