manage products + clients fonctionnel avec front

--- a/create-products.html
+++ b/create-products.html
@@ -1,11 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Administration</title>
+    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="create-products.css">
 </head>
+
+<body>
+    <!-- En-tête -->
+    <header class="top-bar">
+        <div class="logo">
+            <img src="logo.png" alt="Logo">
+        </div>
+        <nav class="nav-menu">
+            <a href="manage-products.html" class="nav-link">
+                <i class="bx bxs-box"></i>
+                <span>Manage Products</span>
+            </a>
+            <a href="manage-clients.html" class="nav-link">
+                <i class="bx bxs-user"></i>
+                <span>Manage Clients</span>
+            </a>
+            <a href="manage-orders.html" class="nav-link">
+                <i class="bx bxs-cart"></i>
+                <span>Manage Orders</span>
+            </a>
+        </nav>
+    </header>
 <body>
     
 <form id="add-product-form">
