--- a/manage-clients.html
+++ b/manage-clients.html
@@ -1,207 +1,188 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="manage-clients.css">
+    <title>Gestion des Clients</title>
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="manage-clients.css">
-    <title>Manage users</title>
 </head>
-
+<body>
 <header>
-    <nav>
-        <ul class="nav-menu">
-            <li><a href="accueil.html">Home</a></li>
-            <li><a href="aboutus.html">Manage clients</a></li>
-
-            <li><a href="shop.html">Shop</a></li>
-            <li><a href="project.html">Project</a></li>
-            <li><a href="actualites.html">News</a></li>
-            <li><a href="conseils.html">Advices</a></li>
-            <li><a href="connection.html">Connexion</a></li>
-            <li class="cart-icon">
-                <a href="fakepanier.html">
-                    <i class="bx bx-cart" style="font-size: 24px; color: #333;"></i>
-                </a>
-            </li>
-        </ul>
+    <div class="logo"><img src="logo.png" alt="Logo"></div>
+    <nav class="nav-menu">
+        <a href="manage-products.html" class="nav-link"><i class="bx bxs-box"></i><span>Manage Products</span></a>
+        <a href="manage-client.html" class="nav-link"><i class="bx bxs-user"></i><span>Manage Clients</span></a>
+        <a href="manage-orders.html" class="nav-link"><i class="bx bxs-cart"></i><span>Manage Orders</span></a>
     </nav>
 </header>
 
-<body>
-    <div id="filter-container">
-        <input type="text" id="search-bar" placeholder="Rechercher par nom ou email..." oninput="filterusers()">
-        <select id="sort-options" onchange="sortusers()">
-            <option value="">Trier par</option>
+<main>
+    <aside class="sidebar">
+        <a href="admin.html" class="undo-link"><i class="bx bx-undo"></i></a>
+        <h3>Actions</h3>
+        <button onclick="startEdit()" class="action-btn" id="edit-btn" disabled>Modifier</button>
+        <button onclick="startDelete()" class="action-btn" id="delete-btn" disabled>Supprimer</button>
+        <div id="edit-form-container" style="display: none;">
+            <h2>Modifier le client</h2>
+            <form id="edit-client-form">
+                <input type="hidden" id="edit-client-id">
+                <label for="edit-username">Nom d'utilisateur :</label>
+                <input type="text" id="edit-username" required>
+                <label for="edit-email">Email :</label>
+                <input type="email" id="edit-email" required>
+                <label for="edit-role">Rôle :</label>
+                <input type="text" id="edit-role" required>
+                <button type="submit">Enregistrer</button>
+            </form>
+        </div>
+    </aside>
+
+    <section class="client-list-section">
+        <h1>Liste des clients</h1>
+        <input type="text" id="search-bar" placeholder="Rechercher..." oninput="filterClients()">
+        <select id="sort-options" onchange="sortClients()">
             <option value="username">Nom d'utilisateur</option>
             <option value="email">Email</option>
             <option value="role">Rôle</option>
         </select>
-    </div>
 
-    <table id="users-table">
-        <thead>
-            <tr>
-                <th>ID</th>
-                <th>Nom d'utilisateur</th>
-                <th>Email</th>
-                <th>Rôle</th>
-                <th>Modifier</th>
-                <th>Supprimer</th>
-            </tr>
-        </thead>
-        <tbody id="users-list">
-        </tbody>
-    </table>
+        <div id="client-list" class="client-list"></div>
+    </section>
 
-    <div id="edit-form-container" style="display: none;">
-        <h2>Modifier le client</h2>
-        <form id="edit-client-form">
-            <label for="edit-username">Nom d'utilisateur :</label>
-            <input type="text" id="edit-username" required>
+    
+</main>
 
-            <label for="edit-email">Email :</label>
-            <input type="email" id="edit-email" required>
+<script>
+let allClients = [];
+let selectedClientId = null;
 
-            <label for="edit-role">Rôle :</label>
-            <input type="text" id="edit-role" required>
+async function fetchClients() {
+    try {
+        const response = await fetch('http://localhost:3000/api/users');
+        allClients = await response.json();
+        displayClients(allClients);
+    } catch (error) {
+        console.error('Erreur lors de la récupération des clients :', error);
+    }
+}
 
-            <input type="hidden" id="edit-client-id">
-            <button type="submit">Sauvegarder les modifications</button>
-        </form>
-    </div>
+function displayClients(clients) {
+    const clientList = document.getElementById('client-list');
+    clientList.innerHTML = '';
+    clients.forEach(client => {
+        const clientItem = document.createElement('div');
+        clientItem.className = 'client-item';
+        clientItem.innerHTML = `
+            <div class="client-info" onclick="selectClient(${client.id})">
+                <h3>${client.username}</h3>
+                <p>Email : ${client.email}</p>
+                <p>Rôle : ${client.role}</p>
+            </div>
+        `;
+        clientList.appendChild(clientItem);
+    });
+}
 
-    <script>
-        let allusers = []; // recup les infos
+function selectClient(id) {
+    selectedClientId = id;
+    document.getElementById('edit-btn').disabled = false;
+    document.getElementById('delete-btn').disabled = false;
+}
 
-        async function fetchusers() {
-            try {
-                const response = await fetch('http://localhost:3000/api/users'); // voir route app.js
-                const users = await response.json();
-                allusers = users; 
-                displayusers(users);
-            } catch (error) {
-                console.error('Erreur lors de la récupération des users :', error);
-                alert('Erreur lors de la récupération des users');
-            }
+function startEdit() {
+    if (selectedClientId) {
+        editClient(selectedClientId);
+    }
+}
+
+function startDelete() {
+    if (selectedClientId) {
+        if (confirm('Êtes-vous sûr de vouloir supprimer ce client ?')) {
+            deleteClient(selectedClientId);
         }
+    }
+}
 
-
-        function displayusers(users) {
-            const usersList = document.getElementById('users-list');
-            usersList.innerHTML = '';
-
-            users.forEach(client => {
-                const row = document.createElement('tr');
-                row.innerHTML = `
-                    <td>${client.id}</td>
-                    <td>${client.username}</td>
-                    <td>${client.email}</td>
-                    <td>${client.role}</td>
-                    <td><button onclick="editClient(${client.id})">Modifier</button></td>
-                    <td><button onclick="deleteClient(${client.id})">Supprimer</button></td>
-                `;
-                usersList.appendChild(row);
-            });
-        }
-
-        async function deleteClient(id) {
-            try {
-                const response = await fetch(`http://localhost:3000/api/users/${id}`, {
-                    method: 'DELETE',
-                });
-
-                if (response.ok) {
-                    alert('Client supprimé');
-                    fetchusers(); 
-                } else {
-                    const data = await response.json();
-                    alert('Erreur : ' + data.message);
-                }
-            } catch (error) {
-                console.error('Erreur :', error);
-                alert('Erreur lors de la suppression du client');
-            }
-        }
-
-        async function editClient(id) {
-            try {
-                const response = await fetch(`http://localhost:3000/api/users/${id}`);
-                if (!response.ok) {
-                    throw new Error(`Erreur HTTP : ${response.status}`);
-                }
-
-                const client = await response.json();
-                document.getElementById('edit-username').value = client.username;
-                document.getElementById('edit-email').value = client.email;
-                document.getElementById('edit-role').value = client.role;
-                document.getElementById('edit-client-id').value = client.id;
-
-                document.getElementById('edit-form-container').style.display = 'block';
-            } catch (error) {
-                console.error('Erreur lors de la récupération du client :', error);
-                alert('Erreur lors de la récupération du client');
-            }
-        }
-
-        document.getElementById('edit-client-form').addEventListener('submit', async (e) => {
-            e.preventDefault();
-
-            const id = document.getElementById('edit-client-id').value;
-            const username = document.getElementById('edit-username').value;
-            const email = document.getElementById('edit-email').value;
-            const role = document.getElementById('edit-role').value;
-
-            try {
-                const response = await fetch(`http://localhost:3000/api/users/${id}`, {
-                    method: 'PUT',
-                    headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify({ username, email, role })
-                });
-
-                if (response.ok) {
-                    fetchusers();
-                    document.getElementById('edit-form-container').style.display = 'none';
-                } else {
-                    const data = await response.json();
-                    alert('Erreur : ' + data.message);
-                }
-            } catch (error) {
-                console.error('Erreur :', error);
-                alert('Erreur lors de la mise à jour du client');
-            }
+async function deleteClient(id) {
+    try {
+        const response = await fetch(`http://localhost:3000/api/users/${id}`, {
+            method: 'DELETE',
         });
 
-        function filterusers() {
-            const searchQuery = document.getElementById('search-bar').value.toLowerCase();
-            const filteredusers = allusers.filter(client =>
-                client.username.toLowerCase().includes(searchQuery) ||
-                client.email.toLowerCase().includes(searchQuery)
-            );
-            displayusers(filteredusers);
+        if (response.ok) {
+            alert('Client supprimé');
+            fetchClients(); 
+            selectedClientId = null;
+            document.getElementById('edit-btn').disabled = true;
+            document.getElementById('delete-btn').disabled = true;
+        } else {
+            const data = await response.json();
+            alert('Erreur : ' + data.message);
         }
+    } catch (error) {
+        console.error('Erreur :', error);
+        alert('Erreur lors de la suppression du client');
+    }
+}
 
-        function sortusers() {
-            const sortOption = document.getElementById('sort-options').value;
-            let sortedusers = [...allusers];
+function filterClients() {
+    const searchQuery = document.getElementById('search-bar').value.toLowerCase();
+    const filteredClients = allClients.filter(client =>
+        client.username.toLowerCase().includes(searchQuery) ||
+        client.email.toLowerCase().includes(searchQuery) ||
+        client.role.toLowerCase().includes(searchQuery)
+    );
+    displayClients(filteredClients);
+}
 
-            if (sortOption === 'username') {
-                sortedusers.sort((a, b) => a.username.localeCompare(b.username));
-            } else if (sortOption === 'email') {
-                sortedusers.sort((a, b) => a.email.localeCompare(b.email));
-            } else if (sortOption === 'role') {
-                sortedusers.sort((a, b) => a.role.localeCompare(b.role));
-            }
-
-            displayusers(sortedusers);
+async function editClient(id) {
+    try {
+        const response = await fetch(`http://localhost:3000/api/users/${id}`);
+        if (!response.ok) {
+            throw new Error(`Erreur HTTP : ${response.status}`);
         }
+        const client = await response.json();
+        document.getElementById('edit-username').value = client.username;
+        document.getElementById('edit-email').value = client.email;
+        document.getElementById('edit-role').value = client.role;
+        document.getElementById('edit-client-id').value = client.id;
+        document.getElementById('edit-form-container').style.display = 'block';
+    } catch (error) {
+        console.error('Erreur lors de la récupération du client :', error);
+        alert('Erreur lors de la récupération du client');
+    }
+}
 
-        fetchusers(); 
-    </script>
-    <footer>
-        <p>&copy; 2024 L'Arbre Envie - All Rights Reserved</p>
-    </footer>
+document.getElementById('edit-client-form').addEventListener('submit', async (e) => {
+    e.preventDefault();
+
+    const id = document.getElementById('edit-client-id').value;
+    const username = document.getElementById('edit-username').value;
+    const email = document.getElementById('edit-email').value;
+    const role = document.getElementById('edit-role').value;
+
+    try {
+        const response = await fetch(`http://localhost:3000/api/users/${id}`, {
+            method: 'PUT',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify({ username, email, role })
+        });
+
+        if (response.ok) {
+            fetchClients();
+            document.getElementById('edit-form-container').style.display = 'none';
+        } else {
+            const data = await response.json();
+            alert('Erreur : ' + data.message);
+        }
+    } catch (error) {
+        console.error('Erreur :', error);
+        alert('Erreur lors de la mise à jour du client');
+    }
+});
+
+fetchClients();
+</script>
 </body>
-
 </html>
