--- a/manage-orders.html
+++ b/manage-orders.html
@@ -1,26 +1,25 @@
 <!DOCTYPE html>
 <html lang="fr">
-
 <head>
-   <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Manage Orders</title>
-   <link rel="stylesheet" href="manage-order.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Gestion des Produits</title>
+    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="manage-orders.css">
 </head>
-
 <body>
-   <header> <!-- penser à changer les headers pour qu'ils soient tous les mêmes-->
-       <h1>Manage Orders</h1>
-       <nav>
-           <ul class="nav-menu">
-               <li><a href="admin.html">Dashboard</a></li>
-               <li><a href="logout.html">Logout</a></li>
-           </ul>
-       </nav>
-   </header>
+<header>
+    <div class="logo"><img src="logo.png" alt="Logo"></div>
+    <nav class="nav-menu">
+        <a href="manage-products.html" class="nav-link"><i class="bx bxs-box"></i><span>Manage Products</span></a>
+        <a href="manage-clients.html" class="nav-link"><i class="bx bxs-user"></i><span>Manage Clients</span></a>
+        <a href="manage-orders.html" class="nav-link"><i class="bx bxs-cart"></i><span>Manage Orders</span></a>
+    </nav>
+</header>
 
-   <main>
+<main>
     <section class="admin-section">
+        <a href="admin.html" class="undo-link"><i class="bx bx-undo"></i></a>
         <h2>Order Management</h2>
         <div class="filter-section">
             <label for="order-filter">Sort Orders By:</label>
@@ -33,31 +32,30 @@
             <button onclick="toggleVisibility('order-list')" class="toggle-button">Show Orders</button>
         </div>
         <div id="order-list" class="toggle-content">
-            <!-- le contenu des commandes s'afficheici -->
+            <!-- le contenu des commandes s'affiche ici -->
         </div>
     </section>
-    
-   </main>
+</main>
 
-   <footer>
-       <p>&copy; 2024 L'Arbre En Vie - All Rights Reserved</p>
-   </footer>
+<footer>
+    <p>&copy; 2024 L'Arbre En Vie - All Rights Reserved</p>
+</footer>
 
-   <script>
-    // fct pour recup et afficher les commandes avec tri
-    async function fetchSortedOrders(sort = 'created_at_desc') {
-        try {
-            const response = await fetch(`http://localhost:3000/api/orders?sort=${sort}`);
-            if (!response.ok) throw new Error('Erreur lors de la récupération des commandes.');
-            const orders = await response.json();
-
-            displayOrders(orders);
-        } catch (error) {
-            console.error('Erreur dans fetchSortedOrders:', error);
-        }
+<script>
+// Fonction pour récupérer les commandes triées
+async function fetchSortedOrders(sort = 'created_at_desc') {
+    try {
+        const response = await fetch(`http://localhost:3000/api/orders?sort=${sort}`);
+        if (!response.ok) throw new Error('Erreur lors de la récupération des commandes.');
+        const orders = await response.json();
+        displayOrders(orders);
+    } catch (error) {
+        console.error('Erreur dans fetchSortedOrders:', error);
     }
+}
 
-    function displayOrders(orders) { // Affiche les commandes dans la liste
+// Afficher les commandes dans la liste
+function displayOrders(orders) {
     const orderList = document.getElementById('order-list');
     orderList.innerHTML = ''; // Vider le contenu précédent
 
@@ -69,7 +67,9 @@
     orders.forEach(order => {
         const orderItem = document.createElement('div');
         orderItem.classList.add('admin-item');
-        const cartItems = order.cart_items; 
+        const cartItems = order.cart_items;
+
+        orderItem.id = `order-${order.order_id}`; // Ajout d'un ID unique pour chaque commande
 
         orderItem.innerHTML = `
             <h3>Order #F56HDKSB${order.order_id}</h3>
@@ -78,57 +78,104 @@
             <p>Prix total: €${order.total_price.toFixed(2)}</p>
             <p>Paiement effectué le: ${new Date(order.created_at).toLocaleString()}</p>
             <p>Jour de récupération de la commande: ${new Date(order.pickup_date).toLocaleDateString()}</p>
-
-            <p>Créneau horaire: ${order.pickup_slot}</p> <!-- Pickup Slot -->
+            <p>Créneau horaire: ${order.pickup_slot}</p>
             <p>Détail de la commande:</p>
             <ul>
                 ${cartItems.map(item => `<li>${item.name} - €${item.price.toFixed(2)} x ${item.quantity}</li>`).join('')}
             </ul>
             <div class="order-actions">
-                <button onclick="updateOrderStatus(${order.order_id}, 'Being Prepared')">Mark as Being Prepared</button>
-                <button onclick="updateOrderStatus(${order.order_id}, 'Ready for Pickup')">Mark as Ready for Pickup</button>
-                <button onclick="updateOrderStatus(${order.order_id}, 'Delivered')">Mark as Delivered</button>
                 <button onclick="cancelOrder(${order.order_id})">Cancel Order</button>
+                <button onclick="markAsPickedUp(${order.order_id})">Commande Récupérée</button>
             </div>
         `;
         orderList.appendChild(orderItem);
     });
 }
 
-    // fonction pour changer de filtre
-    function filterOrders() {
-        const filter = document.getElementById('order-filter').value;
-        console.log(`Applying filter: ${filter}`); // Debug
-        fetchSortedOrders(filter); // Récupérer et afficher les commandes triées
-    }
+// Fonction pour appliquer le filtre
+function filterOrders() {
+    const filter = document.getElementById('order-filter').value;
+    console.log(`Applying filter: ${filter}`);
+    fetchSortedOrders(filter); // Récupérer et afficher les commandes triées
+}
 
+// Fonction pour marquer la commande comme récupérée (affichage seulement)
+async function markAsPickedUp(orderId) {
+    try {
+        const response = await fetch(`http://localhost:3000/api/orders/${orderId}`, {
+            method: 'PATCH',
+            headers: {
+                'Content-Type': 'application/json',
+            },
+            body: JSON.stringify({
+                status: 'picked_up',  // Statut mis à jour
+            }),
+        });
 
-///////////////////////////////////////////////////////////////////////////////////////////////
-// en attente du calendrier et front paiement final pour ajuster les menus dans manage order //
-///////////////////////////////////////////////////////////////////////////////////////////////
-
-    function updateOrderStatus(orderId, status) {
-        console.log(`Updating order #${orderId} to status: ${status}`);
-    }
-
-    function cancelOrder(orderId) {
-        console.log(`Cancelling order #${orderId}`);
-    }
-
-    // charger les commandes triés par défaut à l'ouverture de la page
-    window.addEventListener('DOMContentLoaded', () => {
-        fetchSortedOrders('created_at_desc'); // Tri par défaut
-    });
-
-    function toggleVisibility(elementId) { // gestion du show order
-        const element = document.getElementById(elementId);
-        if (element.style.display === 'none' || element.style.display === '') {
-            element.style.display = 'block';
-        } else {
-            element.style.display = 'none';
+        if (!response.ok) {
+            throw new Error('Erreur lors de la mise à jour du statut de la commande.');
         }
-    }
-   </script>
-</body>
 
+        const result = await response.json();
+        console.log(result.message);
+
+        // Si la commande est marquée comme récupérée, cachez l'élément de la liste
+        const orderItem = document.getElementById(`order-${orderId}`);
+        if (orderItem) {
+            orderItem.style.display = 'none';  // Masquer la commande
+        }
+
+        alert('La commande a été marquée comme récupérée.');
+    } catch (error) {
+        console.error('Erreur dans markAsPickedUp:', error);
+    }
+}
+
+
+
+
+
+// Fonction pour annuler une commande
+async function cancelOrder(orderId) {
+    try {
+        const response = await fetch(`http://localhost:3000/api/orders/${orderId}`, {
+            method: 'DELETE',
+        });
+
+        if (!response.ok) {
+            throw new Error('Erreur lors de l\'annulation de la commande.');
+        }
+
+        const result = await response.json();
+        console.log(result.message);
+
+        // Retirer la commande de l'affichage après annulation
+        const orderItem = document.getElementById(`order-${orderId}`);
+        if (orderItem) {
+            orderItem.remove(); // Supprimer l'élément de la liste
+        }
+
+        alert('La commande a été annulée avec succès');
+    } catch (error) {
+        console.error('Erreur dans cancelOrder:', error);
+    }
+}
+
+// Charger les commandes triées par défaut à l'ouverture de la page
+window.addEventListener('DOMContentLoaded', () => {
+    fetchSortedOrders('created_at_desc'); // Tri par défaut
+});
+
+// Fonction pour afficher ou masquer les commandes
+function toggleVisibility(elementId) {
+    const element = document.getElementById(elementId);
+    if (element.style.display === 'none' || element.style.display === '') {
+        element.style.display = 'block';
+    } else {
+        element.style.display = 'none';
+    }
+}
+</script>
+
+</body>
 </html>
