index.html + connexion/et clean du site operationnel

--- a/admin.html
+++ b/admin.html
@@ -94,7 +94,7 @@
             localStorage.removeItem("username");
             localStorage.removeItem("userId");
 
-            window.location.href = "accueil.html"; // Redirige vers la page d'accueil après déconnexion
+            window.location.href = "index.html"; // Redirige vers la page d'accueil après déconnexion
         }
     </script>
     <script>
