--- a/cat3.html
+++ b/cat3.html
@@ -14,7 +14,7 @@
                 <img src="logo.png" alt="Logo">
             </div>
             <ul class="nav-menu">
-                <li><a href="accueil.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="aboutus.html">About us</a></li>
                 <li><a href="shop.html">Shop</a></li>
                 <li><a href="project.html">Projects</a></li>
