--- a/conseils.html
+++ b/conseils.html
@@ -17,7 +17,7 @@
         </div>
         <nav>
             <ul class="nav-menu">
-                <li><a href="accueil.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="aboutus.html">About us</a></li>
                 <li><a href="shop.html">Shop</a></li>
                 <li><a href="project.html">Projects</a></li>
@@ -25,7 +25,7 @@
                 <li><a href="conseils.html">Advices</a></li>
                 <!-- on mettra panier.html plus tard-->
                 <li><a href="fakepanier.html">Mon panier</a></li> 
-                <li><a href="connection.html">Connexion</a></li>
+                <a id="user-link"><i class="bx bxs-user-circle"></i></a>
             </ul>
         </nav>
     </header>
@@ -100,6 +100,12 @@
         });
     </script>
 
+    <script src="auth.js"></script>
+    <script>
+        document.addEventListener("DOMContentLoaded", () => {
+            checkUserLink("user-link");
+        });
+    </script>
 </body>
 
 </html>
