--- a/delete-account.html
+++ b/delete-account.html
@@ -15,14 +15,14 @@
         </div>
         <nav>
             <ul class="nav-menu">
-                <li><a href="accueil.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="aboutus.html">About us</a></li>
                 <li><a href="shop.html">Shop</a></li>
                 <li><a href="project.html">Services</a></li>
                 <li><a href="actualites.html">Green Infos</a></li>
                 <li>
                     <a href="fakepanier.html"><i class="bx bx-cart"></i></a>
-                    <a href="connection.html"><i class="bx bxs-user-circle"></i></a>
+                    <a id="user-link"><i class="bx bxs-user-circle"></i></a>
                 </li>
             </ul>
         </nav>
@@ -78,7 +78,7 @@ async function deleteAccount() {
             localStorage.removeItem("isLoggedIn");
             localStorage.removeItem("username");
             localStorage.removeItem("userId");
-            window.location.href = "accueil.html";
+            window.location.href = "index.html";
         } else {
             const data = await response.json();
             alert('Erreur : ' + data.message);
@@ -90,6 +90,13 @@ async function deleteAccount() {
 }
 
 
+ </script>
+
+ <script src="auth.js"></script>
+ <script>
+     document.addEventListener("DOMContentLoaded", () => {
+         checkUserLink("user-link");
+     });
  </script>
    
 </body>
