--- a/fakepanier.html
+++ b/fakepanier.html
@@ -16,7 +16,7 @@
         </div>
         <nav>
             <ul class="nav-menu">
-                <li><a href="accueil.html">Accueil</a></li>
+                <li><a href="index.html">Accueil</a></li>
                 <li><a href="aboutus.html">À propos</a></li>
                 <li><a href="shop.html">Shop</a></li>
                 <li><a href="project.html">Services</a></li>
@@ -176,7 +176,7 @@
             localStorage.removeItem('isLoggedIn');
             
             // redirection vers la page d'accueil après déconnexion -> devient un visitor
-            window.location.href = 'accueil.html';
+            window.location.href = 'index.html';
         });
         </script>
 
