--- a/payement.html
+++ b/payement.html
@@ -14,14 +14,14 @@
         <nav>
             <ul class="nav-menu">
                 <button id="logoutButton">Déconnexion</button>
-                <li><a href="accueil.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="aboutus.html">About us</a></li>
                 <li><a href="shop.html">Shop</a></li>
                 <li><a href="project.html">Projects</a></li>
                 <li><a href="actualites.html">Actuality</a></li>
                 <li><a href="conseils.html">Advices</a></li>
                 <li><a href="fakepanier.html">Mon panier</a></li>
-                <li><a href="connection.html">Connexion</a></li>
+                <a id="user-link"><i class="bx bxs-user-circle"></i></a>
             </ul>
         </nav>
     </header>
@@ -126,6 +126,13 @@
                 console.error("Erreur lors de la requête :", error);
                 alert("Erreur de connexion au serveur.");
             }
+        });
+    </script>
+
+    <script src="auth.js"></script>
+    <script>
+        document.addEventListener("DOMContentLoaded", () => {
+            checkUserLink("user-link");
         });
     </script>
     
