--- a/cat3.html
+++ b/cat3.html
@@ -130,6 +130,7 @@
         
     </script>
 
+    <script src="auth.js"></script>
     <script>
         document.addEventListener("DOMContentLoaded", () => {
             checkUserLink("user-link");
