--- a/payementPaypal.html
+++ b/payementPaypal.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
- 
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,9 +10,9 @@
     <script
         src="https://www.paypal.com/sdk/js?client-id=AbDXM1fx4CqQyV0NAnzWtpN67emI33fVrxsuZ1CI2XcrG_jcfHoL5AK22mJNk3DCLr_JZSJKOPrtXxHB&currency=EUR"></script>
 </head>
- 
+
 <body>
- 
+
     <!-- Navbar avec le logo et les étapes -->
     <header class="progress-header">
         <div class="logo">
@@ -41,82 +41,90 @@
             </div>
         </nav>
     </header>
- 
+
     <!-- Conteneur Principal -->
     <div class="payment-container">
         <h1 class="payment-title">Paiement avec PayPal</h1>
         <p class="payment-description">Cliquez ci-dessous pour effectuer un paiement sécurisé via PayPal.</p>
- 
+
         <!-- Montant du panier dynamique -->
         <p><strong>Total du panier : </strong><span id="cart-total">0,00 €</span></p>
- 
+
         <div id="paypal-button-container" class="paypal-button"></div>
     </div>
- 
+
     <!-- Script PayPal -->
     <script>
         function formatPrice(price) {
             return price.toFixed(2).replace('.', ',');
         }
- 
+
         function loadCart() {
             const cartItems = JSON.parse(localStorage.getItem('cart')) || [];
             const cartTotalContainer = document.getElementById('cart-total');
             const paypalButtonContainer = document.getElementById('paypal-button-container');
- 
+
+            let totalSum = 0;
             cartTotalContainer.textContent = '0,00 €';  // Réinitialisation du total
- 
+
             if (cartItems.length === 0) {
+                totalSum = 0;
                 cartTotalContainer.textContent = '0,00 €';  // Panier vide
             } else {
-                let totalSum = 0;
- 
                 cartItems.forEach(item => {
                     totalSum += item.price * item.quantity;
                 });
- 
-                // Mise à jour du total dynamique
+
                 cartTotalContainer.textContent = `${formatPrice(totalSum)} €`;
- 
-                // Bouton PayPal dynamique
-                paypal.Buttons({
-                    createOrder: function (data, actions) {
-                        return actions.order.create({
-                            purchase_units: [{
-                                amount: {
-                                    value: totalSum.toFixed(2) // Montant dynamique
-                                }
-                            }]
-                        });
-                    },
-                    onApprove: function (data, actions) {
-                        return actions.order.capture().then(function (details) {
-                            alert('Paiement réussi ! Merci ' + details.payer.name.given_name);
-                            clearCart();
-                        });
-                    }
-                }).render('#paypal-button-container');
             }
+
+            console.log('Montant total calculé:', totalSum.toFixed(2));
+
+            // Vérifie que le montant est valide
+            if (isNaN(totalSum) || totalSum <= 0) {
+                alert("Montant invalide !");
+                return;
+            }
+
+            paypal.Buttons({
+                createOrder: function (data, actions) {
+                    console.log('Création commande avec montant:', totalSum.toFixed(2));
+                    return actions.order.create({
+                        purchase_units: [{
+                            amount: {
+                                currency_code: 'EUR',
+                                value: totalSum.toFixed(2) // Montant dynamique
+                            }
+                        }]
+                    });
+                },
+                onApprove: function (data, actions) {
+                    return actions.order.capture().then(function (details) {
+                        alert('Paiement réussi ! Merci ' + details.payer.name.given_name);
+                        clearCart();
+                    });
+                }
+            }).render('#paypal-button-container');
         }
- 
+
         function clearCart() {
             localStorage.removeItem('cart');
             loadCart();
         }
- 
+
         window.onload = loadCart;
     </script>
- 
+
     <!-- Script pour le thème -->
     <script src="theme.js"></script>
- 
+
     <!-- Bouton de changement de thème -->
     <div id="theme-toggle">
         <button id="theme-toggle-btn" title="Changer le thème">
             <i class="bx bx-sun"></i>
         </button>
     </div>
- 
+
 </body>
- 
+
 </html>
